--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "substra-ui",
   "version": "0.0.1",
   "description": "A shared UI components library for the Substra project.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:SubstraFoundation/substra-ui.git",
   "author": "Jérémy Morel <jeremy.morel@owkin.com>",
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
-    "build": "babel src -d dist",
+    "build": "babel src -d dist --ignore **/*.test.js",
     "eslint": "eslint --fix src",
     "test": "jest src",
     "start:dev": "webpack-dev-server",
@@ -24,11 +24,14 @@
     "babel-plugin-emotion": "^10.0.9",
     "emotion": "^10.0.9",
     "prop-types": "latest",
-    "react": "16.8.6"
+    "react": "16.8.6",
+    "react-is": "^16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-syntax-export-default-from": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@emotion/core": "^10.0.10",
