--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "git@github.com:SubstraFoundation/substra-ui.git",
   "author": "Jérémy Morel <jeremy.morel@owkin.com>",
   "license": "Apache-2.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "build": "babel src -d dist --ignore **/*.test.js",
     "eslint": "eslint --fix src",
@@ -19,6 +19,9 @@
     "test",
     "eslint"
   ],
+  "publishConfig": {
+    "registry": "https://substra-npm.owkin.com/"
+  },
   "dependencies": {
     "@emotion/styled": "10.0.11",
     "babel-plugin-emotion": "^10.0.9",
