--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
-    "build": "babel src -d dist --ignore **/*.test.js",
+    "build": "babel src -d dist --ignore **/*.test.js --ignore **/*.stories.js",
     "eslint": "eslint --fix src",
     "test": "jest src",
     "start:dev": "webpack-dev-server",
-    "precommit-msg": "echo 'Pre-commit checks...' && exit 0"
+    "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "pre-commit": [
     "precommit-msg",
@@ -35,10 +37,19 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@emotion/core": "^10.0.10",
+    "@storybook/addon-actions": "^5.1.1",
+    "@storybook/addon-knobs": "^5.1.1",
+    "@storybook/addon-links": "^5.1.1",
+    "@storybook/addon-storyshots": "^5.1.1",
+    "@storybook/addon-storysource": "^5.1.1",
+    "@storybook/addons": "^5.1.1",
+    "@storybook/cli": "^5.1.1",
+    "@storybook/react": "^5.1.1",
     "@types/jest": "24.0.13",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-macros": "^2.6.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-babel": "5.3.0",
@@ -52,6 +63,7 @@
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
     "react-testing-library": "^7.0.1",
+    "require-context.macro": "^1.0.4",
     "webpack": "4.32.2",
     "webpack-cli": "3.3.2",
     "webpack-dev-server": "^3.4.1"
