--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.13.0",
     "jest": "^24.8.0",
+    "jest-dom": "^3.5.0",
     "jest-emotion": "^10.0.11",
     "pre-commit": "^1.2.2",
     "react-dom": "^16.8.6",
