--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "Apache-2.0",
   "private": false,
   "scripts": {
-    "build": "babel src -d dist --ignore **/*.test.js --ignore **/*.stories.js",
+    "build": "babel src -d dist --ignore **/*.test.js,**/*.stories.js",
     "eslint": "eslint --fix src",
     "test": "jest src",
     "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
