--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "@emotion/styled": "10.0.11",
+    "@material-ui/core": "^4.1.1",
     "babel-plugin-emotion": "10.0.9",
+    "classnames": "^2.2.6",
     "emotion": "10.0.9",
     "file-saver": "2.0.2",
     "mime-types": "2.1.24",
