Add tests and color override story

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "prop-types": "latest",
     "react": "16.8.6",
     "react-is": "16.8.6",
-    "react-syntax-highlighter": "10.3.0"
+    "react-syntax-highlighter": "10.3.0",
+    "react-tabs": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
