--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
   "dependencies": {
     "@emotion/styled": "10.0.11",
     "@material-ui/core": "4.1.1",
+    "@material-ui/icons": "4.2.0",
     "babel-plugin-emotion": "10.0.9",
     "classnames": "2.2.6",
     "copy-to-clipboard": "3.2.0",
+    "diacritic": "0.0.2",
+    "downshift": "3.2.10",
     "emotion": "10.0.9",
     "file-saver": "2.0.2",
+    "keycode": "2.2.0",
     "mime-types": "2.1.24",
     "prop-types": "latest",
     "react": "16.8.6",
@@ -45,6 +49,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@emotion/core": "^10.0.10",
+    "@sambego/storybook-state": "1.3.4",
     "@storybook/addon-actions": "^5.1.1",
     "@storybook/addon-knobs": "^5.1.1",
     "@storybook/addon-links": "^5.1.1",
