--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
   },
   "dependencies": {
     "@emotion/styled": "10.0.11",
-    "@material-ui/core": "^4.1.1",
+    "@material-ui/core": "4.1.1",
     "babel-plugin-emotion": "10.0.9",
-    "classnames": "^2.2.6",
-    "copy-to-clipboard": "^3.2.0",
+    "classnames": "2.2.6",
+    "copy-to-clipboard": "3.2.0",
     "emotion": "10.0.9",
     "file-saver": "2.0.2",
     "mime-types": "2.1.24",
     "prop-types": "latest",
     "react": "16.8.6",
     "react-is": "16.8.6",
-    "react-syntax-highlighter": "10.3.0",
-    "react-tabs": "^3.0.0"
+    "react-syntax-highlighter": "10.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
