--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "registry": "https://substra-npm.owkin.com/"
   },
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "10.0.9",
     "@emotion/styled": "10.0.11",
     "@material-ui/core": "4.1.1",
     "babel-plugin-emotion": "10.0.9",
