--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@storybook/addons": "5.1.9",
     "@storybook/cli": "5.1.9",
     "@storybook/react": "5.1.9",
+    "@testing-library/jest-dom": "4.0.0",
     "@testing-library/react": "8.0.4",
     "@types/jest": "24.0.15",
     "babel-eslint": "10.0.2",
