--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
   "dependencies": {
     "@emotion/core": "10.0.15",
     "@emotion/styled": "10.0.15",
-    "@material-ui/core": "4.2.0",
-    "@material-ui/icons": "4.2.1",
     "classnames": "2.2.6",
     "copy-to-clipboard": "3.2.0",
     "diacritic": "0.0.2",
@@ -82,7 +80,9 @@
     "jest-dom": "4.0.0",
     "jest-emotion": "10.0.14",
     "react-dom": "16.9.0",
+    "react-redux": "7.1.0",
     "react-test-renderer": "16.9.0",
+    "redux": "4.0.4",
     "require-context.macro": "1.1.1"
   }
 }
